--- a/estilos.css
+++ b/estilos.css
@@ -111,3 +111,9 @@
         font-weight: 600;
         margin-bottom: 5px;
       }
+
+      .color-legend {
+
+        fill: linear-gradient(#e66465, #9198e5);
+
+      }
